feat(cli): minimal jk new Java Main — compact source on 25+, class on <25
The generated Java sample is now a minimal hello-world Main.java:

- Java 25+ in the default (simple) layout → a JEP 512 compact source file:
  no package, no class, just `void main() { IO.println("Hello, world!"); }`.
- Java < 25 → `class Main { public static void main(String... args) {
  System.out.println("Hello, world!"); } }`.
- Traditional layout has a package, where a compact source file is illegal, so
  the 25+ instance main is wrapped in an explicit `class Main` under the
  package; < 25 is the static-main class as above.